--- a/app/templates/flags/elements-list.html
+++ b/app/templates/flags/elements-list.html
@@ -7,21 +7,15 @@
         <nav aria-label="breadcrumb">
             <ol class="breadcrumb" vocab="https://schema.org/" typeof="BreadcrumbList">
                 <li class="breadcrumb-item" property="itemListElement" typeof="ListItem">
-                    {# <a property="item" typeof="WebPage" href="{% url 'flags:flags-list' %}"> #}
-                    <a property="item" typeof="WebPage" href="{{ request.scheme }}://{{ request.META.HTTP_HOST }}">
+                    <a property="item" typeof="WebPage" href="{% url 'flags:flags-list' %}">
+                    {# <a property="item" typeof="WebPage" href="{{ request.scheme }}://{{ request.META.HTTP_HOST }}"> #}
                         <span property="name">Главная</span>
                     </a>
                     <meta property="position" content="1">
                 </li>
-                <li class="breadcrumb-item" property="itemListElement" typeof="ListItem">
-                  <a property="item" typeof="WebPage"  href="{% url 'flags:elements-list' %}">
-                    <span property="name">Элементы флагов</span>
-                  </a>
-                  <meta property="position" content="2">
-                </li>
                 <li class="breadcrumb-item active" aria-current="page" property="itemListElement" typeof="ListItem">
-                    <span property="name">{{element.name}}</span>
-                    <meta property="position" content="3">
+                  <span property="name">Элементы флагов</span>
+                  <meta property="position" content="2">
                 </li>
             </ol>
         </nav>
@@ -35,63 +29,27 @@
   <div class="container">
     <div class="row">
       <div class="col-12 d-flex justify-content-center">
-      {% if flags %}
-        {% if element.seo_h1 %}
-          <h1>{{element.seo_h1}}</h1>
-          {% else %}
-          <h1>{{element.name}} на флагах стран</h1>
-        {% endif %}
-      {% else %}
         <h1>Что изображено на флагах стран мира</h1>
-      {% endif %}
       </div>
     </div>
   </div>
 </div>
 
-{# Flags list #}
-{% include "partials/_flags-list.html" with flags=flags %}
-
-{# Flag element description #}
-{% if element.description %}
-<div class="py-3">
-  <div class="container">
-    <div class="row">
-      {{element.description|safe}}
-    </div>
-  </div>
-</div>
-{% endif %}
-
 {# Flag's elements #}
-<div class="py-5 bg-light">
+<div class="py-3 bg-white">
   <div class="container">
-    <h2 class="py-3">Полный список элементов флагов</h2>
     {% for elem in elements %}
-    <a href="{% url 'flags:element-detail' elem.slug %}" class="btn btn-outline-primary mb-2">{{elem.name}}</a>
+    <a href="{% url 'flags:element-detail' elem.slug %}" class="btn btn-outline-primary mb-2">
+      {{elem.name}} <span class="badge badge-secondary">{{elem.flags_count}}</span>
+    </a>
     {% endfor %}
   </div>
 </div>
 {% endblock content %}
 
 {# Begin SEO block #}
-
-  {% block canonical %}{% if flags %}{% url 'flags:element-detail' element.slug %}{% else %}{% url 'flags:elements-list' %}{% endif %}{% endblock canonical %}
-
-  {% block meta_title %}{% if flags %}{{element.seo_title}}{% else %}Список всех элементов и объектов на флагах стран мира{% endif %}{% endblock meta_title %}
-
-  {% block meta_description %}
-    {% if flags %}
-      {{element.seo_description}}
-    {% else %}
-      Что изображено на флагах разных стран мира? Какой элемент встречается наиболее часто? Полный список элементов флагов на AllFlags.ru
-    {% endif %}
-  {% endblock meta_description %}
-
-  {% block meta_keywords %}{% endblock meta_keywords %}
-
-  {% block meta_robots %}
-    {% if element.is_index %}index,{% else %}noindex,{% endif %}
-    {% if element.is_follow %}follow{% else %}nofollow{% endif %}
-  {% endblock meta_robots %}
+  {% block canonical %}{% url 'flags:elements-list' %}{% endblock canonical %}
+  {% block meta_title %}{{ seo_title }}{% endblock meta_title %}
+  {% block meta_description %}{{ seo_description }}{% endblock meta_description %}
+  {% block meta_robots %}index, follow{% endblock meta_robots %}
 {# End SEO block #}
